Server/esp_server/build/log/idf_py_stderr_output_112465
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:132:9: error: implicit declaration of function 'init_sd_card' [-Wimplicit-function-declaration]
  132 |     if (init_sd_card() != ESP_OK) {
      |         ^~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
